<resources>
    <string name="app_name">DT-Captain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">dt.captain@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_order_now">Order Now</string>
    <string name="menu_unsuccessful_order">UnSuccessful Order</string>
    <string name="menu_sync">Sync Menu</string>
    <string name="label_login">Login</string>
    <string name="label_logout">Logout</string>
    <string name="label_password">Password</string>
    <string name="action_forgot_password">Forgot password?</string>

    <string name="empty_username">Username cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="label_username">Username</string>
    <string name="label_select_store">Select Store</string>

    <string name="label_all">All</string>
    <string name="label_running_table">Running Table</string>
    <string name="label_empty">Empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_table_no">Table No :25</string>
    <string name="label_name">Name</string>
    <string name="label_number">Number</string>
    <string name="label_pax">Pax</string>
    <string name="label_save">Save</string>
    <string name="label_error_name">Please Enter Name</string>
    <string name="label_error_number">Please Enter Number</string>
    <string name="label_error_pax">Please Enter Pax</string>
    <string name="labels_go_to_tables">Go to Tables</string>

</resources>